[gd_scene load_steps=3 format=3 uid="uid://dui1jxsyw8sok"]

[ext_resource type="Theme" uid="uid://dpjbivqud5dm7" path="res://UI/Interactables/PKButton/menuButton.tres" id="1_2tvu2"]
[ext_resource type="Script" uid="uid://bxcv3pa7mtr31" path="res://UI/Interactables/PKButton/pkMenuButton.gd" id="2_mroji"]

[node name="PKMenuButton" type="Button"]
custom_minimum_size = Vector2(100, 46)
offset_right = 95.0
offset_bottom = 46.0
theme = ExtResource("1_2tvu2")
text = "Button"
script = ExtResource("2_mroji")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
